Updated top aligned issue NILE-3400-1

--- a/app/styles/app-rwd/controllers/teacher/class/_course-map.scss
+++ b/app/styles/app-rwd/controllers/teacher/class/_course-map.scss
@@ -184,7 +184,6 @@
                               }
 
                               .controls {
-                                width: 70px;
                                 .go-live-cnt {
                                   margin: 0;
                                 }
