--- a/app/styles/controllers/teacher/class/_course-map.scss
+++ b/app/styles/controllers/teacher/class/_course-map.scss
@@ -369,6 +369,7 @@
 
             .toggle-on {
               left: -13px;
+              top: -4px;
               font-style: italic;
               font-size: $font-size-xxsmall;
             }
